Set theme jekyll-theme-hacker and migrate Page Generator content

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
+
+google_analytics: 
+show_downloads: true
+theme: jekyll-theme-hacker
